pfp-overview-assets/style.css
/* ... */
/*
 __      __     _____  _____ ____  _    _  _____   __ ___   ___   ___  
 \ \    / /\   |  __ \|_   _/ __ \| |  | |/ ____| /_ |__ \ / _ \ / _ \ 
  \ \  / /  \  | |__) | | || |  | | |  | | (___    | |  ) | | | | | | |
   \ \/ / /\ \ |  _  /  | || |  | | |  | |\___ \   | | / /| | | | | | |
    \  / ____ \| | \ \ _| || |__| | |__| |____) |  | |/ /_| |_| | |_| |
     \/_/    \_\_|  \_\_____\____/ \____/|_____/   |_|____|\___/ \___/ 
                                                                                                                                                                               
*/

@media (max-width: 1200px) {
  .row-0 p {
    font-size: 1.25em;
  }

  h3.supertitle {
    margin-bottom: 0;
    padding-top: 14vh;
  }

  ul li {
    font-size: 1.125em;
  }

  ul {
    padding-left: 1.75em;
  }

  .inner-list {
    margin-left: 1.25em;
  }

  .row-1 h1.row-title {
    background-image: url("yellow-squiggle-shortest.svg");
    background-size: 7em;
  }

  .row-4 {
    flex-direction: column;
  }

  .friend-wrapper {
    width: 220px;
  }

  .friend-image {
    height: 209px !important;
  }

  .row-5 {
    flex-direction: column;
  }

  .note {
    height: 70vw;
    margin-right: 0.5vw;
  }

  .song-title {
    margin-left: 0.5vw;
    margin-top: 1rem;
    height: 85vw;
  }

  .player-wrapper {
    width: 80%;
    display: flex;
  }

  .audio-player {
    margin-top: 0;
  }

  .button-wrapper h4 {
    font-size: 1.25em;
  }

  .button-frame {
    height: 64px;
    width: 248px;
    padding: 0 15px;
  }

  #footer a {
    font-size: 1.25em;
  }
}

/*
  _______       ____  _      ______ _______     _____ _________     ___      ______  _____ 
 |__   __|/\   |  _ \| |    |  ____|__   __|   / ____|__   __\ \   / / |    |  ____|/ ____|
    | |  /  \  | |_) | |    | |__     | |     | (___    | |   \ \_/ /| |    | |__  | (___  
    | | / /\ \ |  _ <| |    |  __|    | |      \___ \   | |    \   / | |    |  __|  \___ \ 
    | |/ ____ \| |_) | |____| |____   | |      ____) |  | |     | |  | |____| |____ ____) |
    |_/_/    \_\____/|______|______|  |_|     |_____/   |_|     |_|  |______|______|_____/ 

*/

@media (max-width: 991px) {
  /* ------------- GLOBALS ------------ */

  .column {
    width: 100%;
    min-width: unset;
    max-width: unset;
    margin-inline: auto;
  }

  .column img {
    min-width: 286px;
  }

  ul {
    display: inline-block;
  }

  ul li {
    font-size: 1.5rem;
  }

  .display-desktop {
    display: none;
  }

  .display-tablet {
    display: block;
  }

  .column .display-tablet {
    margin-block: 3rem;
  }

  .row {
    padding-inline: 6%;
    margin-block: 0;
  }

  p {
    font-size: 1.5rem;
  }

  /* ---- END GLOBAL TABLET STYLES ---- */

  h3.supertitle {
    font-size: 2em;
  }

  .triple-icon-title {
    font-size: 1.75rem;
  }

  h4.italic {
    font-size: 1.25rem;
  }

  h5.supporting-text {
    font-size: 1.25rem;
  }

  /* ------------- 1. header TABLET ------------ */

  #header h3.supertitle {
    padding-top: 16vh;
    font-size: 2.25rem;
  }

  .row-0 {
    height: 52vh;
  }

  .row-0 p {
    font-size: 1.5em;
  }

  #header.right {
    padding-bottom: 3rem;
  }

  iframe {
    margin-inline: auto;
    margin-block: 0.75rem;
    width: 95%;
    height: auto;
  }

  /* ------------- 3. what to expect TABLET ------------ */

  #what-to-expect h1.main-title {
    font-size: 3.5rem;
    margin-block: 0 1.25rem;
  }

  .row-1 h1.row-title {
    background-size: 7em;
  }

  .row-0,
  .row-1,
  .row-2,
  .row-3,
  .row-4 {
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0;
    justify-content: flex-start; /*idea*/
    height: 100%; /*idea*/
  }

  .row-1 h1.row-title,
  .row-2 h1.row-title,
  .row-3 h1.row-title,
  .row-4 h1.row-title {
    background-position: center bottom;
    font-weight: 700;
    font-size: 2.5rem;
    margin-inline: auto;
    margin-block: 2rem 0;
    padding-bottom: 24px;
  }

  .row-1 img,
  .row-2 img {
    margin-block: -1rem;
  }

  .row-1 img,
  .row-2 img,
  .row-3 img {
    width: 94%;
  }

  /* ------------- 4. well strong kind chart TABLET ------------ */

  #well-strong-kind-chart img {
    width: 99%;
    margin-inline: auto;
  }

  #new-campus-resources img {
    margin-block: 3rem 2rem;
  }

  /* -------------- 6. three friends TABLET -------------- */

  .three-friends-wrapper {
    margin-right: unset;
    width: 95%;
  }

  .friend-wrapper {
    width: 186px;
    margin-inline: 0;
  }

  .friend-wrapper h1 {
    margin-bottom: 0.25em;
  }

  .friend-wrapper .friend-image {
    height: 180px !important;
  }

  .friend-word {
    font-size: 1.5em;
  }

  .row-4 .right {
    margin-left: unset;
  }

  .row-4 p {
    font-size: 1.75rem;
    margin-block: 1.5rem;
    text-align: center;
  }

  /* -------------- 7. Music player section - Empathy song TABLET -------------- */

  #music-player {
    flex-direction: column;
    gap: unset;
  }

  .player-wrapper {
    width: 95%;
    margin-top: 1em;
    display: flex;
    justify-content: center;
  }

  .audio-player {
    border-width: 3vw;
  }

  /* -------------- 8. footer row TABLET -------------- */

  #footer {
    height: 55vh;
  }

  #footer h1 {
    padding-top: 1.5rem;
    font-size: 2.25rem;
  }

  #footer h3 {
    max-width: unset;
    font-size: 1.5rem;
  }

  .buttons-wrapper {
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 2vw;
  }

  .button-wrapper:first-of-type {
    margin-bottom: 0.5rem;
  }

  .button-wrapper h4 {
    font-size: 1.75rem;
    margin-bottom: 0.75rem;
  }

  .button-frame {
    margin-inline: auto;
  }
}
/* ... */

